# bonsai

./: .dockerignore  .env.example  .gitignore  .impeccable.md  ASSIGNMENT.md  CLAUDE.md  PROCESS.md  README.md  dev.sh  docker-compose.yml  experiment.py  program.md  pyproject.toml
backend/: Dockerfile  config.py  main.py
backend/agents/: branch_processor.py  research_graph.py
backend/agents/nodes/: planner.py  reflect.py  searcher.py  synthesizer.py
backend/agents/prompts/: planner.md  reflect.md  synthesizer.md
backend/models/: types.py
backend/tests/: conftest.py  test_branch_processor.py  test_eval_composite.py  test_experiment.py  test_main.py  test_planner.py  test_reflect.py  test_research_graph.py  test_searcher.py  test_synthesizer.py  test_types.py
docs/: ITERATION_1.md  ITERATION_2.md
docs/superpowers/plans/: 2026-04-17-bonsai-implementation.md  2026-04-17-bonsai-iteration-1-fixes.md  2026-04-18-bonsai-visual-redesign.md  2026-04-19-graph-first-layout.md  2026-04-25-autoresearch-setup.md  (+1 more)
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: AnswerRenderer.module.css  AnswerRenderer.tsx  GraphView.module.css  GraphView.tsx  NodeDetail.module.css  NodeDetail.tsx  QueryInput.module.css  QueryInput.tsx  ResearchTree.module.css  ResearchTree.tsx  SourceCard.module.css  SourceCard.tsx  StatusBar.module.css  StatusBar.tsx  TreePanel.module.css  TreePanel.tsx
frontend/hooks/: useResearchStream.ts  useResearchTree.ts
frontend/lib/: types.ts
scripts/: eval.py
(+17 files in other folders)
